--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('bg.jpg');
 }
 .play-again-btn {
-    background-color: rgb(165, 108, 108);
+    background-color: rgba(165, 108, 108, 0.418);
     text-align: center;
     border-radius: 5px 5px 5px 5px;
     border: none;
@@ -19,15 +19,17 @@ button:hover {
 .top-board {
     width: 610px;
     height: 160px;
-    background-color: rgba(231, 208, 199, 0.267);
+    background-color: rgba(231, 208, 199, 0.103);
     margin-bottom: 20px;
     border-radius: 40px 40px 5px 5px;
+    box-shadow: 4px 4px 9px black;
+    cursor: none;
 }
 
 h3, h1 {
     font-size: larger;
     font-weight: bold;
-    font-family: "Roboto", sans-serif;
+    font-family: "Caveat", sans-serif;
     padding: 35px;
     color: #521818ce;
     text-align: center;
@@ -36,19 +38,22 @@ h3, h1 {
 }
 
 h1 {
-    font-size: 25px;
+    font-size: 30px;
     padding-bottom: 0;
     margin-top: 0;
     margin-bottom: 0;
+    color: rgb(128, 0, 0);
+    font-weight: bolder;
 }
 
 h2 { 
     padding-top: 0;
+
 }
 main {
     padding: 2% 20%;
     border-top: 0;
-    width: 98%;
+    width: 100%;
 }
 .board {
     display: flex;
@@ -56,7 +61,7 @@ main {
     justify-content: space-between;
     width: 610px;
     height: 610px;
-    background-color: #f1927f;
+    background-color: #f1927f0e;
     
 }
 
@@ -68,6 +73,8 @@ main {
     margin-bottom: 5px;
     transform: rotateZ(8deg);
     border-radius: 30px 30px 30px 30px;
+    box-shadow: 5px 5px 8px #1f1d1d, 2px 2px 5px #573737, 14px 14px 14px #1b0e0e;
+    cursor: pointer;
     
 }
 
