--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ button:hover {
 .top-board {
     width: 610px;
     height: 160px;
-    background-color: rgba(231, 208, 199, 0.103);
+    background-color: rgba(231, 208, 199, 0.274);
     margin-bottom: 20px;
     border-radius: 40px 40px 5px 5px;
     box-shadow: 4px 4px 9px black;
@@ -54,6 +54,7 @@ main {
     padding: 2% 20%;
     border-top: 0;
     width: 100%;
+    padding-top: 10%;
 }
 .board {
     display: flex;
@@ -62,6 +63,8 @@ main {
     width: 610px;
     height: 610px;
     background-color: #f1927f0e;
+    padding: auto;
+    padding-top: 20px;
     
 }
 
