--- a/style.css
+++ b/style.css
@@ -15,14 +15,29 @@ body {
     cursor: pointer;
     color: rgb(236, 234, 233);
     margin-top: 30px;
+    margin-left: 30%;
+    padding: 10px 25px;
+    border-radius: 10px;
+    border: solid 5px white;
+}
+.grid {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+.righside {
+    color: red;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 button:hover {
     background-color: pink;
+    border: solid 5px rgb(176, 51, 72);
+    border-radius: 10px;
+    color:  rgb(176, 51, 72);
 }
 .top-board {
     width: 500px;
     height: 160px;
-    background-color: rgba(231, 208, 199, 0.274);
+    background-color: rgba(231, 208, 199, 0.3);
     margin-bottom: 20px;
     border-radius: 40px 40px 5px 5px;
     box-shadow: 4px 4px 9px black;
@@ -58,6 +73,7 @@ main {
     border-top: 0;
     width: 100%;
     padding-top: 10%;
+    padding-left: 25%;
 }
 
 .board {
@@ -66,7 +82,7 @@ main {
     justify-content: space-between;
     width: 500px;
     height: 500px;
-    background-color: #f1927f0e;
+    background-color: #f1927f00;
     padding: auto;
     padding-top: 20px;
     
@@ -76,7 +92,7 @@ main {
 .board div {
     width: 160px;
     height: 160px; 
-    background-color: mistyrose;
+    background-color: rgba(255, 228, 225, 0.849);
     margin-bottom: 5px;
     transform: rotateZ(8deg);
     border-radius: 30px 30px 30px 30px;
